[package]
name = "jinja"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }


[workspace.package]
edition = "2021"
authors = ["developers <anonymous@hoge.com>"]
description = "axum Web Application Server"
